--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ const res = await fetch("https://insidious-silent-calculator.glitch.me")
     console.error(`error: ${er.message}`)
   }
 }
-</script></body>
+</script>ee()</body>
